[package]
name = "cirru_parser"
version = "0.1.14"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Parser for Cirru text syntax"
homepage = "http://cirru.org"
documentation = "https://docs.rs/crate/cirru_parser/"
repository = "https://github.com/Cirru/parser.rs"
readme = "README.md"
exclude = [
  "tests/cirru/*",
  "tests/data/*",
  "src/main.rs",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
serde_json = "1.0.69"
criterion = "0.3"


[lib]
name = "cirru_parser"
path = "src/parser.rs"
test = true
doctest = true
bench = true

# [profile.release]
# debug = true

exclude = ["/wasm-example"]

[[bench]]
name = "parsing"
harness = false
