[package]
name = "cirru_parser"
version = "0.1.29"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Parser for Cirru text syntax"
homepage = "http://cirru.org"
documentation = "https://docs.rs/crate/cirru_parser/"
repository = "https://github.com/Cirru/parser.rs"
readme = "README.md"
exclude = [
  "tests/cirru/*",
  "tests/data/*",
  "tests/writer_cirru/*",
  "tests/writer_data/*",
  "src/main.rs",
  "/wasm-example",
  "examples/",
  ".github/"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
use-serde = ["serde", "serde_json"]

# ['cfg(features = "use-serde")'.dependencies]
[dependencies]
serde = { version = "1.0.147", optional = true }
serde_json = { version = "1.0.87", optional = true }
bincode = "2.0.0-rc.3"

[dev-dependencies]
criterion = "0.4.0"

[lib]
name = "cirru_parser"
path = "src/parser.rs"
test = true
doctest = true
bench = true

[profile.release]
debug = true

[[bench]]
name = "parsing"
harness = false
