
[package]
name = "cirru_parser"
version = "0.2.2"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Parser for Cirru text syntax"
homepage = "http://cirru.org"
documentation = "https://docs.rs/crate/cirru_parser/"
repository = "https://github.com/Cirru/parser.rs"
readme = "README.md"
exclude = [
  "tests/cirru/*",
  "tests/data/*",
  "tests/writer_cirru/*",
  "tests/writer_data/*",
  "src/main.rs",
  "/wasm-example",
  "examples/",
  ".github/",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# JSON conversion utilities (requires serde which is enabled by default)
serde-json = ["dep:serde_json"]

[dependencies]
serde = "1.0.219"
serde_json = { version = "1.0.141", optional = true }
bincode = "2.0.1"

[dev-dependencies]
criterion = "0.5.1"

[lib]
name = "cirru_parser"
path = "src/parser.rs"
test = true
doctest = true
bench = true

[profile.release]
debug = true

[[bench]]
name = "parsing"
harness = false
